# ray-summit-2025

./: 03_image_caption_demo.py  Developer.md  Presentation.md  README.md  developer.md  developer_guide.md  performance.md  presentation.md  pyproject.toml  verify_install.py  vllm_ray_metrics_integration.md
grafana/: ray_data_llm_dashboard.json
src/: 01_image_caption_demo.py  02_image_caption_demo.py  03_image_caption_demo.py  04_image_caption_demo.py  visualize.py
