[project]
name = "ray-summit-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "datasets>=4.0.0",
    "qwen_vl_utils==0.0.11",
    "ray[default,data]==2.50.1",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchmetrics>=1.0.3",
    "torchvision==0.23.0",
    "torch-optimizer==0.3.0",
    "transformers[torch]==4.57.1",
    "vllm==0.11.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]
notebook = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.0.0",
    "jupyterlab>=4.0.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchmetrics = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv]
# Error we encountered `(RuntimeError: There is no current event loop in thread 'MainThread')` occurs because:
#   Ray Data creates actors in separate processes
#   uvloop has stricter requirements for event loop creation
#   When Ray tries to create an event loop in the actor process, uvloop throws an error
# Solution: Do not install uvloop
override-dependencies = [
    "uvloop ; sys_platform == 'never'"
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
